Fixed some paddings and alignments

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -230,6 +230,10 @@ h6 {
   margin-right: 45px;
 }
 
+.padding-top-0 {
+  padding-top: 0!important;
+}
+
 /* ==========================================================================
    #WRAPPER
    ========================================================================== */
